tests/snapshots/files__simple_call-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@inc(v0: int) {
  v1_: int = const 1;
  v2_: int = add v0 v1_;
  print v2_;
}
@main {
  v0_: int = const 0;
  call @inc v0_;
}
