tests/snapshots/files__simple_call-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v1: int = const 1;
  print v1;
}
@inc(v0: int) {
  v2: int = const 1;
  v5: int = add v2 v0;
  print v5;
}

