tests/snapshots/files__simple_call-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
inc {
one: int = const 1;
res: int = add one x;
print res;
return
}

main {
a: int = const 0;
call @inc a;
return
}
