tests/snapshots/files__simple_loop-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
.b0_:
  c1_: int = const 0;
  print c1_;
  ret;
}
