tests/snapshots/files__simple_loop-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
  c0_: int = const 0;
  print c0_;
  ret;
}
