tests/snapshots/files__simple_loop-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
  v0: int = const 0;
  jmp .__4__;
.__4__:
  v5: int = const 0;
  v8: bool = lt v5 v5;
  br v8 .__4__ .__12__;
.__12__:
  print v0;
}

