tests/snapshots/files__simple_loop-rvsdg.snap
---
source: tests/files.rs
expression: visualization.result
---
<svg
	height="700"
	version="1.1"
	width="800"
	xmlns="http://www.w3.org/2000/svg">
	<g
		transform="translate(0, 0)">
		<rect
			fill="white"
			height="700"
			rx="10"
			stroke="black"
			stroke-width="2"
			width="800">
		</rect>
		<g>
			<path
				d="M 400 0V 15Q 400 25 400 25H 400Q 400 25 400 35V 50"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 100 150V 170Q 100 180 110 180H 673.3333Q 683.3333 180 683.3333 190V 550"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 458.3333 500V 510Q 458.3333 520 468.3333 520H 706.6667Q 716.6667 520 716.6667 530V 550"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
			<path
				d="M 700 650V 665Q 700 675 690 675H 410Q 400 675 400 685V 700"
				fill="transparent"
				stroke="black"
				stroke-linecap="round"
				stroke-width="2">
			</path>
		</g>
		<g>
			<g
				transform="translate(50, 50)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						0
					</text>
				</g>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(200, 50)">
				<rect
					fill="#FF8080"
					height="450"
					rx="10"
					stroke="black"
					stroke-width="2"
					width="400">
				</rect>
				<text
					fill="black"
					font-size="50"
					x="25"
					y="50">
					loop
				</text>
				<g
					transform="translate(25, 75)">
					<rect
						fill="white"
						height="350"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="350">
					</rect>
					<g>
						<path
							d="M 175 0V 320Q 175 330 185 330H 223.33333Q 233.33333 330 233.33333 340V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 100 150V 165Q 100 175 110 175H 223.33333Q 233.33333 175 233.33333 185V 200"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 100 150V 165Q 100 175 110 175H 256.66666Q 266.66666 175 266.66666 185V 200"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
						<path
							d="M 250 300V 310Q 250 320 240 320H 126.666664Q 116.666664 320 116.666664 330V 350"
							fill="transparent"
							stroke="black"
							stroke-linecap="round"
							stroke-width="2">
						</path>
					</g>
					<g>
						<g
							transform="translate(50, 50)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									0
								</text>
							</g>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
						<g
							transform="translate(200, 200)">
							<g>
								<rect
									fill="#FFFF80"
									height="100"
									rx="10"
									stroke="black"
									stroke-width="2"
									width="100">
								</rect>
								<text
									fill="black"
									font-size="50"
									text-anchor="middle"
									x="50"
									y="62.5">
									lt
								</text>
							</g>
							<circle
								cx="33.333332"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="66.666664"
								cy="0"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
							<circle
								cx="50"
								cy="100"
								fill="white"
								r="4"
								stroke="black"
								stroke-width="2">
							</circle>
						</g>
					</g>
					<g>
						<circle
							cx="175"
							cy="0"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
					<g>
						<circle
							cx="116.666664"
							cy="350"
							fill="black"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
						<circle
							cx="233.33333"
							cy="350"
							fill="white"
							r="4"
							stroke="black"
							stroke-width="2">
						</circle>
					</g>
				</g>
				<circle
					cx="200"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="258.3333"
					cy="450"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
			<g
				transform="translate(650, 550)">
				<g>
					<rect
						fill="#FFFF80"
						height="100"
						rx="10"
						stroke="black"
						stroke-width="2"
						width="100">
					</rect>
					<text
						fill="black"
						font-size="50"
						text-anchor="middle"
						x="50"
						y="62.5">
						PRINT
					</text>
				</g>
				<circle
					cx="33.333332"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="66.666664"
					cy="0"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
				<circle
					cx="50"
					cy="100"
					fill="white"
					r="4"
					stroke="black"
					stroke-width="2">
				</circle>
			</g>
		</g>
		<g>
			<circle
				cx="400"
				cy="0"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
		<g>
			<circle
				cx="400"
				cy="700"
				fill="white"
				r="4"
				stroke="black"
				stroke-width="2">
			</circle>
		</g>
	</g>
</svg>

