tests/snapshots/files__simple_loop-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:

while true:
 i: int = const 0;
 cond: bool = lt i i;
 if cond:

 else:
  print i;
  return
}
