tests/snapshots/files__simple_loop_unswitch-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 40
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = lt c1_ v0;
  c3_: int = const 1;
  v4_: int = id c1_;
  v5_: int = id c1_;
  v6_: int = id c3_;
  v7_: int = id v0;
  v8_: int = id c1_;
  br v2_ .b9_ .b10_;
.b9_:
  v11_: int = id c1_;
  v12_: int = id c1_;
  v13_: int = id c3_;
  v14_: int = id v0;
  v15_: int = id c1_;
.b16_:
  print v12_;
  v17_: bool = lt v14_ v15_;
  v18_: int = id v11_;
  v19_: int = id v12_;
  v20_: int = id v13_;
  v21_: int = id v14_;
  v22_: int = id v15_;
  br v17_ .b23_ .b24_;
.b23_:
  c25_: int = const 2;
  v18_: int = id c25_;
  v19_: int = id v12_;
  v20_: int = id v13_;
  v21_: int = id v14_;
  v22_: int = id v15_;
.b24_:
  v26_: int = add v13_ v18_;
  v27_: int = add v12_ v13_;
  v28_: bool = lt v27_ v14_;
  v11_: int = id v26_;
  v12_: int = id v27_;
  v13_: int = id v13_;
  v14_: int = id v14_;
  v15_: int = id v15_;
  br v28_ .b16_ .b29_;
.b29_:
  v4_: int = id v11_;
  v5_: int = id v12_;
  v6_: int = id v13_;
  v7_: int = id v14_;
  v8_: int = id v15_;
  print v4_;
  ret;
  jmp .b30_;
.b10_:
  print v4_;
  ret;
.b30_:
}
